# bouncer

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  build.gradle  env_export.sh  render.yaml  settings.gradle  sqlx-data.json
.github/workflows/: rust.yml
.sqlx/: query-30164407b03d16a98a751e0d1e6020196ae1ec6981c6dc2699ff7944fb0c0e85.json  query-4d375979eaa34e8b2047ba3b744aed65266301019c3afd5a066c31d2cec084db.json  query-6de81fb748e4a262c33e613473e796a0648dafeaa26176c44ae83301ae1f1de6.json  query-88f55f5f6814ef517dd38678e37da630eec5a7d3a085b58850b54f7cb716eea7.json  query-a81c1e33b420728634ca2fbd1b3ab4c6aca05dd6759b09d43331c934cb27874a.json
log_macro/: Cargo.toml
log_macro/src/: lib.rs
migrations/: 20231009193641_init.down.sql  20231009193641_init.up.sql
scripts/: build_docker_image.sh  docker_run.sh
src/: main.rs  tests.rs
src/application/: catchers.rs  context.rs  database.rs  database_migrations.rs  logging.rs  metrics.rs  mod.rs  swagger.rs  system_information.rs
src/auth/: auth_service.rs  auth_token_validation.rs  guards.rs  login_error.rs  login_form.rs  login_response.rs  mod.rs  models.rs
src/controllers/: auth_controller.rs  health_controller.rs  mod.rs  system_controller.rs  user_controller.rs
src/main/java/com/thiefspin/bouncer/: MainApplication.java
src/main/java/com/thiefspin/bouncer/controllers/: AuthController.java  HealthController.java
src/main/java/com/thiefspin/bouncer/models/: LoginRequest.java
src/main/resources/: config.yml
src/tests/: auth_controller_tests.rs  controller_tests.rs  mod.rs  system_controller_tests.rs  testing_postgres.rs  user_controller_tests.rs
src/users/: mod.rs  models.rs  user_dao.rs  user_model.rs  user_service.rs
src/utils/: controller_utils.rs  date_time.rs  mod.rs
time_logger_macro/: Cargo.toml
time_logger_macro/src/: lib.rs
