[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.28", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc", "rocket_db_pools"] }
#sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "migrate", "time"] }
sqlx = { version = "0.6", features = ["postgres", "chrono", "uuid", "migrate", "time", "offline"] }
dotenv = "0.15.0"
jsonwebtoken = "8"
rocket-jwt = "0.5.1"
sysinfo = "0.29.11"
sqlx-cli = { version = "0.6", default-features = false, features = ["postgres", "rustls"] }
testcontainers = "0.15.0"
lazy_static = { version = "1.4.0", features = [] }

[dependencies.rocket]
rocket = "0.5.0-rc.3"
features = ["json"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres", "sqlx_macros"]
