[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc", "rocket_db_pools"] }
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "migrate", "time"] }
# sqlx = { version = "0.8.3", features = ["postgres", "chrono", "uuid", "migrate", "time", "offline"] }
# sqlx = { version = "0.8.3", features = ["postgres", "chrono", "uuid", "migrate", "time"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rocket-jwt = "0.5.1"
sysinfo = "0.33.1"
sqlx-cli = { version = "0.7.4", default-features = false, features = ["postgres", "rustls"] }
testcontainers = "0.23.1"
lazy_static = { version = "1.4.0", features = [] }
log = "0.4"
fern = "0.7.1"
rocket_prometheus = "0.10.0-rc.3"
once_cell = "1.20.2"
prometheus = "0.13.4"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres", "sqlx_macros"] }
value-bag = "1.4.1"

# [dependencies.rocket]
# rocket = "0.5.0-rc.3"
# features = ["json"]

# [dependencies.rocket_db_pools]
# version = "0.2.0"
# features = ["sqlx_postgres", "sqlx_macros"]
